[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/UI & misc/ComicsGridUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/cinematics/cinematics V2.gd" type="Script" id=3]
[ext_resource path="res://fonts/Menu_dynamicfont.tres" type="DynamicFont" id=4]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ScrollContainer" parent="." instance=ExtResource( 1 )]
chap_1 = false
chap_3 = false
chap_4 = false
chap_5 = false

[node name="back" type="Button" parent="."]
margin_left = 17.8381
margin_top = 5.70287
margin_right = 161.838
margin_bottom = 124.703
rect_scale = Vector2( 1.00913, 1.00913 )
custom_fonts/font = ExtResource( 4 )
text = "Back"
flat = true

[node name="Position2D" type="Position2D" parent="."]

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
