[gd_scene load_steps=50 format=2]

[ext_resource path="res://scenes/cinematics/cinematics V2.gd" type="Script" id=1]
[ext_resource path="res://resources/title animation/Dystopia Logo Drop shadow.png" type="Texture" id=2]
[ext_resource path="res://resources/Buttons/bck.png" type="Texture" id=3]
[ext_resource path="res://singletons/Title animation.tres" type="Animation" id=4]
[ext_resource path="res://resources/title animation/dots.png" type="Texture" id=5]
[ext_resource path="res://godot.png" type="Texture" id=6]
[ext_resource path="res://scenes/Shaders/CRT.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_22.webp" type="Texture" id=8]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_31.webp" type="Texture" id=9]
[ext_resource path="res://scenes/UI & misc/3d in 2d.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_63.webp" type="Texture" id=11]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_34.webp" type="Texture" id=12]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_7.webp" type="Texture" id=13]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_15.webp" type="Texture" id=14]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_39.webp" type="Texture" id=15]
[ext_resource path="res://resources/title animation/cape_animation_sprites/body_2.webp" type="Texture" id=16]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_67.webp" type="Texture" id=17]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_17.webp" type="Texture" id=18]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_51.webp" type="Texture" id=19]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_46.webp" type="Texture" id=20]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_41.webp" type="Texture" id=21]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_53.webp" type="Texture" id=22]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_58.webp" type="Texture" id=23]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_60.webp" type="Texture" id=24]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_55.webp" type="Texture" id=25]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_29.webp" type="Texture" id=26]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_43.webp" type="Texture" id=27]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_48.webp" type="Texture" id=28]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_65.webp" type="Texture" id=29]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_36.webp" type="Texture" id=30]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_1.webp" type="Texture" id=31]
[ext_resource path="res://resources/title animation/cape_animation_sprites/body_1.webp" type="Texture" id=32]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_19.webp" type="Texture" id=33]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_10.webp" type="Texture" id=34]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_24.webp" type="Texture" id=35]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_27.webp" type="Texture" id=36]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_12.webp" type="Texture" id=37]
[ext_resource path="res://resources/title animation/cape_animation_sprites/cape_4.webp" type="Texture" id=38]
[ext_resource path="res://resources/title animation/intro_animation_sprites/concept_1.webp" type="Texture" id=39]
[ext_resource path="res://resources/title animation/intro_animation_sprites/concept_2.webp" type="Texture" id=40]
[ext_resource path="res://resources/title animation/intro_animation_sprites/concept_3.webp" type="Texture" id=41]
[ext_resource path="res://resources/title animation/intro_animation_sprites/hands_1.webp" type="Texture" id=42]
[ext_resource path="res://resources/title animation/intro_animation_sprites/hands_3.webp" type="Texture" id=43]
[ext_resource path="res://resources/title animation/intro_animation_sprites/hands_2.webp" type="Texture" id=44]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 38 ), ExtResource( 13 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 33 ), ExtResource( 8 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 26 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 30 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 28 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 11 ), ExtResource( 29 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 44 ), ExtResource( 43 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7.35754, 176.804 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect2:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("side_view:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("3_4_view:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 478, 584 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("side_view:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 256, 290 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("front_view:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("front_view:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.629976, 0.629976 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("3_4_view:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("3_4_view:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("cape:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "opening_cinematic"
length = 23.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 117.466, 186.878 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 474.52, 267.573 ), Vector2( 123.457, 192.822 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect2:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.5, 6.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureRect2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("side_view:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3, 6.7, 8.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("side_view:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 6.7, 8.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1199, 268 ), Vector2( 481, 290 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("front_view:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.3, 8.1, 13 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("front_view:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 8.1, 13 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.520001, 0.520001 ), Vector2( 0.660824, 0.660824 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("3_4_view:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.3, 13, 16.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("3_4_view:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 13.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 521, 318 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("3_4_view:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 13.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.486048, 0.486048 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("cape:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.3, 16.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Cinematics" type="Control"]
anchor_right = 1.0
anchor_bottom = 2.86167
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 8.48529
margin_top = 8.48523
margin_right = 8.48529
margin_bottom = 8.48523
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
margin_left = 395.616
margin_top = 196.548
margin_right = 651.616
margin_bottom = 452.548
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 117.466
margin_top = 186.878
margin_right = 848.466
margin_bottom = 459.878
mouse_filter = 2
input_pass_on_modal_close_click = false
texture = ExtResource( 2 )
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -7.35754
margin_top = 176.804
margin_right = 723.647
margin_bottom = 449.804
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Sprite" parent="." instance=ExtResource( 10 )]
mouse_filter = 2
input_pass_on_modal_close_click = false

[node name="cape" type="Sprite" parent="."]
visible = false
position = Vector2( 486, 339 )
scale = Vector2( 0.463077, 0.463077 )

[node name="body_animation" type="AnimatedSprite" parent="cape"]
position = Vector2( 0, 6 )
frames = SubResource( 3 )
playing = true

[node name="cape_animation" type="AnimatedSprite" parent="cape"]
frames = SubResource( 4 )
playing = true

[node name="side_view" type="Sprite" parent="."]
visible = false
position = Vector2( 256, 290 )
scale = Vector2( 0.535192, 0.535192 )
texture = ExtResource( 39 )

[node name="3_4_view" type="Sprite" parent="."]
visible = false
position = Vector2( 478, 584 )
texture = ExtResource( 41 )

[node name="hands" type="AnimatedSprite" parent="3_4_view"]
position = Vector2( 43.2056, 8.22961 )
scale = Vector2( 1.01962, 1.01962 )
frames = SubResource( 5 )
playing = true

[node name="front_view" type="Sprite" parent="."]
visible = false
position = Vector2( 505, 304 )
scale = Vector2( 0.629976, 0.629976 )
texture = ExtResource( 40 )

[node name="ColorRect" parent="." instance=ExtResource( 7 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
input_pass_on_modal_close_click = false

[node name="skip" type="TextureButton" parent="."]
modulate = Color( 0.584314, 0.152941, 0.152941, 1 )
margin_left = 364.443
margin_top = 555.112
margin_right = 724.443
margin_bottom = 867.112
rect_scale = Vector2( 0.488382, 0.469212 )
texture_normal = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 499, 957 )

[node name="animation player" type="AnimationPlayer" parent="."]
autoplay = "intro_animation"
anims/RESET = SubResource( 1 )
anims/intro_animation = ExtResource( 4 )
anims/opening_cinematic = SubResource( 2 )

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="skip" to="." method="_on_skip_pressed"]
[connection signal="animation_finished" from="animation player" to="." method="_on_animation_player_animation_finished"]
